--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/rss": "^4.0.14",
-    "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/sitemap": "^3.6.1",
     "@astrojs/solid-js": "^5.1.3",
-    "@astrojs/svelte": "^7.2.2",
+    "@astrojs/svelte": "^7.2.5",
+    "@directus/sdk": "^18.0.3",
     "@iconify-json/ri": "^1.2.6",
     "@rive-app/canvas": "^2.32.2",
-    "astro": "^5.16.4",
+    "astro": "^5.16.9",
     "astro-icon": "^1.1.5",
     "astro-robots-txt": "^1.0.0",
     "autoprefixer": "^10.4.22",
@@ -30,10 +31,13 @@
     "mdast-util-to-string": "^4.0.0",
     "motion": "^12.23.25",
     "reading-time": "^1.5.0",
+    "shiki": "^3.21.0",
     "solid-js": "^1.9.10",
     "svelte": "^5.45.6"
   },
   "devDependencies": {
+    "@shikijs/langs": "^3.21.0",
+    "@shikijs/themes": "^3.21.0",
     "@types/d3": "^7.4.3",
     "@typescript-eslint/parser": "^8.48.1",
     "@unocss/astro": "^66.5.10",
