--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/rss": "^4.0.14",
-    "@astrojs/sitemap": "^3.6.1",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/solid-js": "^5.1.3",
-    "@astrojs/svelte": "^7.2.5",
+    "@astrojs/svelte": "^7.2.2",
     "@directus/sdk": "^18.0.3",
     "@iconify-json/ri": "^1.2.6",
     "@rive-app/canvas": "^2.32.2",
-    "astro": "^5.16.9",
+    "astro": "^5.16.4",
     "astro-icon": "^1.1.5",
     "astro-robots-txt": "^1.0.0",
     "autoprefixer": "^10.4.22",
@@ -54,4 +54,10 @@
     "typescript": "^5.9.3",
     "unocss": "^66.5.10"
   }
+  "overrides": {
+  "vite": "^6.0.5"
+}
+"engines": {
+  "node": ">=20.0.0"
+}
 }
