--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
-    "@astrojs/netlify": "^6.6.3",
+    "@astrojs/node": "^9.5.1",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/solid-js": "^5.1.3",
@@ -55,9 +55,9 @@
     "unocss": "^66.5.10"
   },
   "overrides": {
-  "vite": "^6.0.5"
-},
-"engines": {
-  "node": ">=20.0.0"
-}
+    "vite": "^6.0.5"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
